roles - fixed unneeded escaping which breaks JS code (bnc#791345)
- 0.3.8

--- a/plugins/roles/app/views/roles/index.html.erb
+++ b/plugins/roles/app/views/roles/index.html.erb
@@ -216,7 +216,7 @@
       $("img.deleteRole").click( function () { blockForm(); });
 
 
-      $('#usersContent').sliderNav({items:[<%= @alpha %>], arrows:false });
+      $('#usersContent').sliderNav({items:[<%= @alpha.html_safe %>], arrows:false });
 
     });
 
