roles - fixed nil check in users index
- fade out the info box
- 0.3.9

--- a/plugins/roles/app/assets/javascripts/webyast-roles.js.erb
+++ b/plugins/roles/app/assets/javascripts/webyast-roles.js.erb
@@ -45,9 +45,7 @@
 
 //Info tooltip
 hideTooltip = function() { 
-  var $tooltip = $('#roles_tipsy_tooltip');
-  $tooltip.fadeOut(); 
-  $($tooltip).attr({"style": 'display:none'});
+  $('#roles_tipsy_tooltip').fadeOut('slow');
 }
 
 showTooltip = function(message) {
