roles/index.html.erb - added FIXME note

--- a/plugins/roles/app/views/roles/index.html.erb
+++ b/plugins/roles/app/views/roles/index.html.erb
@@ -232,6 +232,7 @@
         modal: true,
 	      close: clearForm,
         buttons: {
+               <%# TODO FIXME: make the button labels translatable -%>
 	       'Create Role': function() {
 	       if ($("#rolesForm").validate().form() == true) {
 	         $(this).children("form").first().submit();
