--- a/plugins/administrator/app/views/administrator/index.html.erb
+++ b/plugins/administrator/app/views/administrator/index.html.erb
@@ -50,10 +50,21 @@
       	submitHandler: function(form) {
 			    var message = <%= jss _("Please wait") -%>;
           $.modalDialog.wait( {message: message});
-			    //disableFormOnSubmit(message);
           form.submit();
         }
       })
+
+      $("[name='save_aliases']").click(function(){
+        if ($('#adminForm').validate().element('#administrator_aliases')) {
+          $('#submit_type').val('save_aliases')
+          return true;
+        } else {
+          $('#submit_type').val('')
+          return false;
+        }
+      });
+      //, :onclick=>"$('#submit_type').val('save_aliases');return $('#adminForm').validate().element('#administrator_aliases');"
+
 
       // make the error message translatable - override the default messsage
       $.extend($.validator.messages, {
@@ -133,7 +144,7 @@
       	  <label style="float:left; display:inline-block; width:204px; line-height:24px;"><%=_("Forward system mail to")%></label> <!-- RORSCAN_ITL -->
   	      <%= f.text_field :aliases, :disabled => disabled, :class => "emails" %>
 	        <% unless params.has_key? "firstboot" # during initial configuration, allow only main Save button %>
-        	  <%= f.submit _("Save Mail Only"), :name => "save_aliases", :disabled => disabled, :onclick=>"$('#submit_type').val('save_aliases');return $('#adminForm').validate().element('#administrator_aliases');", :class=>'cancel' %>
+        	  <%= f.submit _("Save Mail Only"), :name => "save_aliases", :disabled => disabled, :class=>'cancel' %>
         	  <label style="line-height:26px;" for="administrator_aliases" generated="true" class="error"></label>
      	  	<% end %>
 
