software - fixed JS rendering at new repository page (bnc#794049)
allow changing properties of the new repository

--- a/plugins/software/app/views/repositories/new.html.erb
+++ b/plugins/software/app/views/repositories/new.html.erb
@@ -92,7 +92,7 @@
     // check whether the repository already exists
     function check_duplicate()
     {
-      var repos = <%= @repo_urls.map{|u| escape_javascript u}.to_json -%>;
+      var repos = <%= @repo_urls.to_json.html_safe -%>;
       var url = $('#repository_url').val();
 
       for (var i = 0; i < repos.length; i++)
