--- a/plugins/mailsetting/app/views/mailsetting/show.html.erb
+++ b/plugins/mailsetting/app/views/mailsetting/show.html.erb
@@ -53,7 +53,7 @@
         $('#mailForm').valid();
       });
 
-      $("#mailsetting_confirm_password").validate({keyup : true});
+      $("#mailsetting_password_confirmation").validate({keyup : true});
     });
   </script>
 <% end %>
@@ -106,7 +106,7 @@ relay.example.com:26. Use square brackets around the host name to prevent from D
 
         <div class="row lastrow">
           <label><%=_("Confirm password")%></label>
-          <%= f.password_field :confirm_password, :disabled => disabled, :equalTo => "#mailsetting_password" %>
+          <%= f.password_field :password_confirmation, :disabled => disabled, :equalTo => "#mailsetting_password" %>
         </div>
       </div>
     </fieldset>
