--- a/plugins/mailsetting/app/views/mailsetting/show.html.erb
+++ b/plugins/mailsetting/app/views/mailsetting/show.html.erb
@@ -118,7 +118,7 @@ relay.example.com:26. Use square brackets around the host name to prevent from D
       <div class="fieldset_body">
         <div class="row lastrow">
           <label id="mail_test_mail_label"><%=_("Send test mail to")%></label>
-          <%= f.text_field :test_mail_address, :disabled => disabled, :class => "email" %>
+          <%= f.text_field :test_mail_address, :disabled => disabled, :class => "email required" %>
           <%= f.submit _("Send Mail"), :name => "send_mail" %>
           <label for="mail_test_mail_address" generated="true" class="error"></label>
         </div>
