roles - fixed broken layout (invalid JS code) resulting in unfunctional module (bnc#791345)
- 0.3.11

--- a/plugins/roles/app/views/roles/index.html.erb
+++ b/plugins/roles/app/views/roles/index.html.erb
@@ -217,7 +217,7 @@
       $("img.deleteRole").click( function () { blockForm(); });
 
 
-      $('#usersContent').sliderNav({items: <%= alpha_list.to_json -%>, arrows:false });
+      $('#usersContent').sliderNav({items: <%= alpha_list.to_json.html_safe -%>, arrows:false });
 
     });
 
