Group the parameters into time and timezone groups

--- a/plugins/time/app/views/time/_timezones.html.erb
+++ b/plugins/time/app/views/time/_timezones.html.erb
@@ -30,6 +30,6 @@ region["entries"].each() do |timezone|
 end
 list.sort!
 %>
-<%= select_tag "timezone",
+<%= select_tag "time[timezone][timezone]",
   options_for_select(list, central), :disabled=> disabled %>
 
