--- a/plugins/time/app/views/time/index.html.erb
+++ b/plugins/time/app/views/time/index.html.erb
@@ -137,7 +137,7 @@
 	    <div class="fieldset_body">
 	      <div class="row">
           <label for="region"><%=_("Region")%></label>
-          <%= select_tag "region", options_for_select(@stime.regions, @stime.region["name"]), :disabled => disabled %>
+          <%= select_tag "time[timezone][region]", options_for_select(@stime.regions, @stime.region["name"]), :disabled => disabled %>
   	    </div>
 
  	      <div class="row">
@@ -151,7 +151,7 @@
         <div class="row">
           <label><%=_("Hardware clock is set to UTC")%></label>
           <%# don't use check_box helper as it generate also hidden opposite value %>
-          <input type="checkbox" name="utc" id="utc" value="true" <%=  "checked='checked'" if @stime.utcstatus %> <%=  "disabled='disabled'" if disabled %> />
+          <input type="checkbox" name="time[timezone][utc]" id="utc" value="true" <%=  "checked='checked'" if @stime.utcstatus %> <%=  "disabled='disabled'" if disabled %> />
         </div>
         <% end %>
       </div>
@@ -167,7 +167,7 @@
         <div class="fieldset_body">
           <fieldset class="time_filedset" >
             <legend>
-              <input type="radio" name="timeconfig" value="manual" id="timeconfig_manual"
+              <input type="radio" name="time[timeconfig][config]" value="manual" id="timeconfig_manual"
               <%= "disabled='disabled'" if disabled%>
               <%= "checked='checked'" unless @ntp_available && @ntpd_running %>/>
               <%= label_tag "timeconfig_manual", _("Manually configure time"), :class => "description" %>
@@ -175,41 +175,42 @@
 
             <div class="time_subsection">
             <div class="row check_row">
-              <%= check_box 'time', :set_time, {:disabled => disabled, :checked => false}, true, false %>
+              <%= check_box 'time[timeconfig]', "set_time", { :id=>:time_set_time, :disabled => disabled, :checked => false }, true, false %>
               <%= label_tag :time_set_time, _("Set the current date and time") %>
             </div>
 
             <div class="row">
               <label for="date_date"><%= _("Date") %></label>
-              <%= text_field "date","date", :disabled=> @ntp_available ? true :false , :value => @stime.date %>
+              <%= text_field "time[timeconfig]", "date", :id=>:date_date, :disabled=> @ntp_available ? true :false , :value => @stime.date %>
             </div>
 
             <div class="row">
               <label for="currenttime"><%= _("Time") %></label>
-              <%= text_field_tag "currenttime", @stime.time, :disabled=> @ntp_available ? true :false %>
+              <%= text_field "time[timeconfig]", "currenttime", :id=>:currenttime, :value => @stime.time,
+                  :disabled=> @ntp_available ? true :false %>
             </div>
             </div>
           </fieldset>
 
-          <fieldset class="time_filedset" >
-            <legend>
-              <input id="ntp_sync" type="radio" name="timeconfig" value="ntp_sync"
-              <%=  "disabled=\"disabled\"" if disabled || !@ntp_available %>
-              <%=  "checked='checked'" if @ntp_available && @ntpd_running %> />
-              <%= label_tag "ntp_sync", _("Synchronize via Network Time Protocol (NTP)"), :class => "description" %>
-            </legend>
+          <%- if can?(:setserver, Ntp) %>
+            <fieldset class="time_filedset" >
+              <legend>
+                <input id="ntp_sync" type="radio" name="time[timeconfig][config]" value="ntp_sync"
+                <%=  "disabled=\"disabled\"" if disabled || !@ntp_available %>
+                <%=  "checked='checked'" if @ntp_available && @ntpd_running %> />
+                <%= label_tag "ntp_sync", _("Synchronize via Network Time Protocol (NTP)"), :class => "description" %>
+              </legend>
 
-            <% if @ntp_available %>
-            <div class="time_subsection">
-              <div class="row">
-              <label for="ntp_server"><%= _("NTP server") %></label>
-                <%= options = {}
-                    options[:disabled] = "disabled" unless can?(:setserver, Ntp)
-                    text_field_tag("ntp_server", @ntp.actions[:ntp_server] || "", options={:class=>"ntp_server"})  %>
+              <% if @ntp_available %>
+              <div class="time_subsection">
+                <div class="row">
+                <label for="ntp_server"><%= _("NTP server") %></label>
+                <%= text_field "time[timeconfig]", "ntp_server", :id => :ntp_server, :value => @ntp.actions[:ntp_server] %>
+                 </div>
                </div>
-             </div>
-            <% end %>
-          </fieldset>
+              <% end %>
+            </fieldset>
+          <% end %>
           <div class="clearfix"></div>
         </div>
       </fieldset>
