--- a/plugins/time/app/views/time/_timezones.html.erb
+++ b/plugins/time/app/views/time/_timezones.html.erb
@@ -20,16 +20,6 @@
 # you may find current contact information at www.novell.com
 #++
 %>
-<%
-#prepare array for options, maybe add to controller?
-list = []
-central = ""
-region["entries"].each() do |timezone|
-  list.push timezone['name']
-  central = timezone['name'] if timezone['id'] == default
-end
-list.sort!
-%>
-<%= select_tag "systemtime[timezone]",
-  options_for_select(list, central), :disabled=> disabled %>
+<% timezones = system_time.timezones.find { |zone| zone[:region] == system_time.region }[:timezones].sort %>
+<%= select_tag "systemtime[timezone]", options_for_select(timezones, system_time.timezone), :disabled=> disabled %>
 
