--- a/plugins/time/app/views/time/index.html.erb
+++ b/plugins/time/app/views/time/index.html.erb
@@ -175,7 +175,7 @@
 
             <div class="time_subsection">
             <div class="row check_row">
-              <%= check_box 'time', :set_time, {:disabled => disabled, :checked => false}, true, false %>
+              <%= check_box 'time', :set_time, {:disabled => disabled, :checked => false} %>
               <%= label_tag :time_set_time, _("Set the current date and time") %>
             </div>
 
