--- a/plugins/kerberos/app/views/kerberos/index.html.erb
+++ b/plugins/kerberos/app/views/kerberos/index.html.erb
@@ -97,14 +97,14 @@
       <div class="fieldset_header">
         <span class="fieldset_header_title" >
           <%= _("Enable Kerberos Authentication") %>
-          <%= check_box 'kerberos', :enabled, {:disabled => disabled, :checked => @kerberos.enabled}, true,false -%>
+          <%= check_box 'kerberos', :enabled, {:disabled => disabled, :checked => @kerberos.enabled}, "true","false" -%>
         </span>
       </div>
 
       <div class="fieldset_body">
         <div class="row">
           <%# FIME: move the style to a separate CSS file %>
-          <%= check_box 'kerberos', :use_dns, {:disabled => disabled, :checked => @kerberos.dns_used, :style => "width: auto; vertical-align: middle;"}, true, false %>
+          <%= check_box 'kerberos', :use_dns, {:disabled => disabled, :checked => @kerberos.dns_used, :style => "width: auto; vertical-align: middle;"}, "true", "false" %>
           <%= label_tag :kerberos_use_dns, _("Use Kerberos configuration from DNS server"), :style => "width: auto; vertical-align: middle;", :title => _("If checked the Kerberos configuration will be read from DNS server at runtime instead of using the preconfigured values below."), :class => "tipsy_help" %>
         </div>
 
